Fix navbar alignment and remove hover underlines

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -82,6 +82,8 @@
 
 .navbar__item {
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .navbar__link {
@@ -100,29 +102,12 @@
 
   &:hover {
     color: var(--brand);
+    text-decoration: none;
   }
   &.is-active {
     color: var(--brand);
     background-color: color-mix(in srgb, var(--brand) 12%, transparent);
   }
-  &::after {
-    content: "";
-    position: absolute;
-    left: calc(var(--space) * 1);
-    right: calc(var(--space) * 1);
-    bottom: calc(var(--space) * 0.6);
-    height: 2px;
-    background: var(--brand);
-    border-radius: 1px;
-    transform: scaleX(0);
-    transform-origin: center;
-    transition: transform var(--t-normal) var(--ease);
-  }
-}
-
-.navbar__item:hover > .navbar__link::after,
-.navbar__link.is-active::after {
-  transform: scaleX(1);
 }
 
 .navbar__chevron {
@@ -187,6 +172,7 @@
   &:hover {
     background: color-mix(in srgb, var(--brand) 10%, transparent);
     color: var(--brand);
+    text-decoration: none;
   }
   &.is-active {
     background: color-mix(in srgb, var(--brand) 14%, transparent);
